writing alignment code into pipeline

--- a/reduction/manual_alignment.ipynb
+++ b/reduction/manual_alignment.ipynb
@@ -462,48 +462,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 421,
    "id": "07a1cff6-3a7e-49e9-8d8b-44e967c32bff",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<TableColumns names=('Filename','Test','Visit','Group','Exposure','Module','IGNORE','xshift (arcsec)','yshift (arcsec)','Notes')>"
+       "<TableColumns names=('Filename','Test','Filename_1','Visit','Group','Exposure','Module','IGNORE','xshift (arcsec)','yshift (arcsec)','Notes')>"
       ]
      },
-     "execution_count": 399,
+     "execution_count": 421,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Table.read('/orange/adamginsburg/jwst/cloudc/offsets/Offsets_JWST_Cloud_C.csv').columns#[0]['Test'].split(\"'\")[0]"
+    "#.to_pandas()#.columns#[0]['Test'].split(\"'\")[0]\n",
+    "#offsets_tbl.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 422,
    "id": "7bcf3023-5623-4002-baea-a792f8daf586",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "align_member = member['expname'].split('.')[0]+'_align.fits'\n",
-    "shutil.copy(member['expname'], align_member)"
+    "#align_member = member['expname'].split('.')[0]+'_align.fits'\n",
+    "#shutil.copy(member['expname'], align_member)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 424,
+   "id": "bf1f5ba1-5923-4d5b-a4d3-e27964b170c2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Column name=&apos;Filename_1&apos; dtype=&apos;str48&apos; length=1&gt;\n",
+       "<table>\n",
+       "<tr><td>jw02221002001_08201_00004_nrcblong_destreak.fits</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Column name='Filename_1' dtype='str48' length=1>\n",
+       "jw02221002001_08201_00004_nrcblong_destreak.fits"
+      ]
+     },
+     "execution_count": 424,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "offsets_tbl[offsets_tbl['Filename_1']=='jw02221002001_08201_00004_nrcblong_destreak.fits']['Filename_1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 426,
+   "id": "cbec14e2-9fcc-4111-bb19-20b4005177b6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Column name=&apos;xshift (arcsec)&apos; dtype=&apos;float64&apos; length=1&gt;\n",
+       "<table>\n",
+       "<tr><td>7.95</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Column name='xshift (arcsec)' dtype='float64' length=1>\n",
+       "7.95"
+      ]
+     },
+     "execution_count": 426,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "offsets_tbl[offsets_tbl['Filename_1']=='jw02221002001_08201_00004_nrcblong_destreak.fits']['xshift (arcsec)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 429,
+   "id": "3378c188-7803-482c-8fa6-d92b40540e04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jw02221002001_08201_00004_nrcblong_align.fits'"
+      ]
+     },
+     "execution_count": 429,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = 'jw02221002001_08201_00004_nrcblong_destreak.fits'\n",
+    "\n",
+    "file.replace(\"_destreak.fits\", \"_align.fits\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf1f5ba1-5923-4d5b-a4d3-e27964b170c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbec14e2-9fcc-4111-bb19-20b4005177b6",
+   "id": "d6f8a3d6-43b6-4714-a295-2898fc87aa46",
    "metadata": {},
    "outputs": [],
    "source": []
