--- a/reduction/align_align.ipynb
+++ b/reduction/align_align.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 1,
    "id": "b6a28c1b-bb8b-4fd3-8aec-dc6f4730a520",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "2f9f3085-4317-4f9a-9343-45d50821365d",
    "metadata": {},
    "outputs": [
@@ -87,25 +87,34 @@
       "text/plain": [
        "['/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_realigned.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_realigned_to_vvv.fits',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_copy.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_rate.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_tweakregstep.fits',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_align.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_trapsfilled.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_realigned_to_vvv_cat.ecsv',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_align_o002_crf.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_o002_crf.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_rateints.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_outlier_i2d.fits',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_align.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_cal.fits',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_align_cal.fits',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_tweakregstep.phot.txt',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_o002_crf.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_i2d.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_uncal.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak.fits',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_align_o002_blot.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_realigned_to_outlier_i2d.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_cat.ecsv',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_align_tweakregstep.fits',\n",
        " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_cal_cat.ecsv',\n",
-       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_realigned_to_vvv_o002_crf.fits']"
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_destreak_realigned_to_vvv_o002_crf.fits',\n",
+       " '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_02201_00004_nrcalong_align_cat.ecsv']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,11 +661,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "646293aa-8de7-42e6-8f35-b65c1050f104",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XTENSION= 'IMAGE   '           / Image extension                                \n",
+       "BITPIX  =                  -32 / array data type                                \n",
+       "NAXIS   =                    2 / number of array dimensions                     \n",
+       "NAXIS1  =                 2048                                                  \n",
+       "NAXIS2  =                 2048                                                  \n",
+       "PCOUNT  =                    0 / number of parameters                           \n",
+       "GCOUNT  =                    1 / number of groups                               \n",
+       "EXTNAME = 'SCI     '           / extension name                                 \n",
+       "MJD-BEG =    60059.17993754803 / [d] exposure start time in MJD                 \n",
+       "MJD-AVG =    60059.18024821846 / [d] exposure mid-point in MJD                  \n",
+       "MJD-END =    60059.18055888889 / [d] exposure end time in MJD                   \n",
+       "TDB-BEG =     60059.1763516291 / [d] TDB time of exposure start in MJD          \n",
+       "TDB-MID =    60059.17666230362 / [d] TDB time of exposure mid-point in MJD      \n",
+       "TDB-END =    60059.17697297814 / [d] TDB time of exposure end in MJD            \n",
+       "XPOSURE =               42.947 / [s] Effective exposure time                    \n",
+       "TELAPSE =               42.947 / [s] Total elapsed exposure time                \n",
+       "                                                                                \n",
+       "        JWST ephemeris information                                              \n",
+       "                                                                                \n",
+       "REFFRAME= 'EME2000 '           / Ephemeris reference frame                      \n",
+       "EPH_TYPE= 'Predicted'          / Definitive or Predicted                        \n",
+       "EPH_TIME=    60059.17986111111 / [d] MJD time of position and velocity vectors  \n",
+       "JWST_X  =   -126159260.1679879 / [km] barycentric JWST X coordinate at MJD_AVG  \n",
+       "JWST_Y  =   -79319563.47778496 / [km] barycentric JWST Y coordinate at MJD_AVG  \n",
+       "JWST_Z  =   -34114278.13938407 / [km] barycentric JWST Z coordinate at MJD_AVG  \n",
+       "OBSGEO-X=    -682686136.630116 / [m] geocentric JWST X coordinate at MJD_AVG    \n",
+       "OBSGEO-Y=    -1181552504.95838 / [m] geocentric JWST Y coordinate at MJD_AVG    \n",
+       "OBSGEO-Z=    -277343920.150161 / [m] geocentric JWST Z coordinate at MJD_AVG    \n",
+       "JWST_DX =    16.64459139060498 / [km/s] barycentric JWST X velocity at MJD_AVG  \n",
+       "JWST_DY =   -22.91771106929853 / [km/s] barycentric JWST Y velocity at MJD_AVG  \n",
+       "JWST_DZ =   -10.07482488468523 / [km/s] barycentric JWST Z velocity at MJD_AVG  \n",
+       "OBSGEODX=     282.538724443105 / [m/s] geocentric JWST X velocity at MJD_AVG    \n",
+       "OBSGEODY=    -249.445386128751 / [m/s] geocentric JWST Y velocity at MJD_AVG    \n",
+       "OBSGEODZ=    -247.646097407311 / [m/s] geocentric JWST Z velocity at MJD_AVG    \n",
+       "PA_APER =      275.39756167374 / [deg] Position angle of aperture used          \n",
+       "VA_SCALE=    1.000080197824935 / Velocity aberration scale factor               \n",
+       "BUNIT   = 'MJy/sr  '           / physical units of the array values             \n",
+       "                                                                                \n",
+       "        Photometry information                                                  \n",
+       "                                                                                \n",
+       "PHOTMJSR=    10.92240047454834 / Flux density (MJy/steradian) producing 1 cps   \n",
+       "PHOTUJA2=   256.72480327423125 / Flux density (uJy/arcsec2) producing 1 cps     \n",
+       "PIXAR_SR= 9.20944023299612E-14 / Nominal pixel area in steradians               \n",
+       "PIXAR_A2= 0.003918172030450555 / Nominal pixel area in arcsec^2                 \n",
+       "                                                                                \n",
+       "        Information about the coordinates in the file                           \n",
+       "                                                                                \n",
+       "RADESYS = 'ICRS    '           / Name of the coordinate reference frame         \n",
+       "                                                                                \n",
+       "        Spacecraft pointing information                                         \n",
+       "                                                                                \n",
+       "RA_V1   =    266.4346537998578 / [deg] RA of telescope V1 axis                  \n",
+       "DEC_V1  =   -28.56713107121949 / [deg] Dec of telescope V1 axis                 \n",
+       "PA_V3   =    275.5279504866381 / [deg] Position angle of telescope V3 axis      \n",
+       "                                                                                \n",
+       "        WCS parameters                                                          \n",
+       "                                                                                \n",
+       "WCSAXES =                    2 / number of World Coordinate System axes         \n",
+       "CRPIX1  =               1024.5 / axis 1 coordinate of the reference pixel       \n",
+       "CRPIX2  =               1024.5 / axis 2 coordinate of the reference pixel       \n",
+       "CRVAL1  =      266.59305344716 / first axis value at the reference pixel        \n",
+       "CRVAL2  =      -28.55541708394 / second axis value at the reference pixel       \n",
+       "CTYPE1  = 'RA---TAN-SIP'       / Axis 1 type                                    \n",
+       "CTYPE2  = 'DEC--TAN-SIP'       / Axis 2 type                                    \n",
+       "CUNIT1  = 'deg     '           / Axis 1 units                                   \n",
+       "CUNIT2  = 'deg     '           / Axis 2 units                                   \n",
+       "CD1_1   = -1.6103367948909E-06 / linear transformation matrix element, CD matrix\n",
+       "CD1_2   =   -1.74418950742E-05 / linear transformation matrix element, CD matrix\n",
+       "CD2_1   = -1.7359959867296E-05 / linear transformation matrix element, CD matrix\n",
+       "CD2_2   =  1.6457580296555E-06 / linear transformation matrix element, CD matrix\n",
+       "S_REGION= 'POLYGON ICRS  266.614880398 -28.540132891 266.574179867 &'           \n",
+       "CONTINUE  '-28.537182840 266.570297156 -28.572425136 266.611220709 &'           \n",
+       "CONTINUE  '-28.576251947&'                                                      \n",
+       "CONTINUE  '' / spatial extent of the observation                                \n",
+       "V2_REF  =            85.939298 / [arcsec] Telescope V2 coord of reference point \n",
+       "V3_REF  =          -493.510653 / [arcsec] Telescope V3 coord of reference point \n",
+       "VPARITY =                   -1 / Relative sense of rotation between Ideal xy and\n",
+       "V3I_YANG=            -0.054893 / [deg] Angle from V3 axis to Ideal y axis       \n",
+       "RA_REF  =    266.5926193015105 / [deg] Right ascension of the reference point   \n",
+       "DEC_REF =   -28.55648436402227 / [deg] Declination of the reference point       \n",
+       "ROLL_REF=      275.45245467374 / [deg] V3 roll angle at the ref point (N over E)\n",
+       "VELOSYS =            -24020.85 / [m/s] Barycentric correction to radial velocity\n",
+       "A_ORDER =                    5 / Degree of forward SIP polynomial               \n",
+       "B_ORDER =                    5 / Degree of forward SIP polynomial               \n",
+       "A_0_2   = -1.5546799122833E-06 / SIP coefficient, forward transform             \n",
+       "A_0_3   = -3.3752782083097E-11 / SIP coefficient, forward transform             \n",
+       "A_0_4   = 5.22517983685575E-15 / SIP coefficient, forward transform             \n",
+       "A_0_5   = 1.84576142393133E-17 / SIP coefficient, forward transform             \n",
+       "A_1_1   = -1.1588276246856E-05 / SIP coefficient, forward transform             \n",
+       "A_1_2   = 1.66584437370845E-09 / SIP coefficient, forward transform             \n",
+       "A_1_3   = -5.4499242122854E-14 / SIP coefficient, forward transform             \n",
+       "A_1_4   = 3.89901615196365E-17 / SIP coefficient, forward transform             \n",
+       "A_2_0   = 1.90165274140654E-06 / SIP coefficient, forward transform             \n",
+       "A_2_1   = -1.6276647229319E-10 / SIP coefficient, forward transform             \n",
+       "A_2_2   = 1.05536531230568E-14 / SIP coefficient, forward transform             \n",
+       "A_2_3   = 5.06621103364904E-17 / SIP coefficient, forward transform             \n",
+       "A_3_0   = 1.59091052187713E-09 / SIP coefficient, forward transform             \n",
+       "A_3_1   = -3.9564161051985E-14 / SIP coefficient, forward transform             \n",
+       "A_3_2   = 1.28018843642851E-16 / SIP coefficient, forward transform             \n",
+       "A_4_0   = -3.0211197059754E-14 / SIP coefficient, forward transform             \n",
+       "A_4_1   = 8.79251996690212E-17 / SIP coefficient, forward transform             \n",
+       "A_5_0   = 1.02604122531058E-17 / SIP coefficient, forward transform             \n",
+       "B_0_2   = -6.7037108272053E-06 / SIP coefficient, forward transform             \n",
+       "B_0_3   = 1.58364650014001E-09 / SIP coefficient, forward transform             \n",
+       "B_0_4   = -4.5603963079915E-14 / SIP coefficient, forward transform             \n",
+       "B_0_5   = 7.10441450636275E-17 / SIP coefficient, forward transform             \n",
+       "B_1_1   = 3.57240938669126E-06 / SIP coefficient, forward transform             \n",
+       "B_1_2   = -3.9582798981753E-11 / SIP coefficient, forward transform             \n",
+       "B_1_3   = 1.82376554720621E-14 / SIP coefficient, forward transform             \n",
+       "B_1_4   = -1.2459707587321E-17 / SIP coefficient, forward transform             \n",
+       "B_2_0   = 4.96140435042345E-06 / SIP coefficient, forward transform             \n",
+       "B_2_1   = 1.54634597213594E-09 / SIP coefficient, forward transform             \n",
+       "B_2_2   = -2.5353402556498E-14 / SIP coefficient, forward transform             \n",
+       "B_2_3   = 1.20917417436572E-16 / SIP coefficient, forward transform             \n",
+       "B_3_0   = 1.92878070794143E-11 / SIP coefficient, forward transform             \n",
+       "B_3_1   = 1.84917974513146E-16 / SIP coefficient, forward transform             \n",
+       "B_3_2   = -9.7993368760434E-18 / SIP coefficient, forward transform             \n",
+       "B_4_0   = 2.54451981585385E-14 / SIP coefficient, forward transform             \n",
+       "B_4_1   = 5.28678838800836E-17 / SIP coefficient, forward transform             \n",
+       "B_5_0   = -1.4159659169966E-17 / SIP coefficient, forward transform             \n",
+       "EXTVER  =                    1 / extension value                                "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fits.getheader(file, ext=1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -697,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 4,
    "id": "35b858bc-2cca-4c1d-9bce-32469243316a",
    "metadata": {},
    "outputs": [],
