--- a/notebooks/EvaluateOffsetFrameProblem-CloudC.ipynb
+++ b/notebooks/EvaluateOffsetFrameProblem-CloudC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "2b0d8a79-8039-4562-b753-c1e4fd13ddb6",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "1e089c13-f897-4307-abba-3db65ae93555",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "122e8a72-932f-48fc-a237-4adc01955ce1",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "1db41aba-a72c-4a84-9352-6ddfea0840a2",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "a8d87760-4d75-48af-8080-2b6c14372222",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "dca74946-0a37-4314-9873-ef6d8c0d5f49",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "406dcf1a-3547-427d-b1be-5a4d58d8f113",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "67435cdb-6166-4d10-838d-28cd6147f80f",
    "metadata": {
     "tags": []
@@ -146,7 +146,7 @@
        "  '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_08201_00003_nrcblong_align_tweakregstep.fits'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "19198c5c-98b8-4603-b568-87ac29106a2d",
    "metadata": {},
    "outputs": [],
@@ -201,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "3d52cad9-b122-48a1-8b45-d1ffed5f1899",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x148974ba9c40>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148938c59040>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148938c59160>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148938c593a0>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148938c59430>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148938c59220>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148938c596d0>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148938c59910>, <astropy.io.fits.hdu.table.BinTableHDU object at 0x148938c59b50>]"
+       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x148974b50f70>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148903644fa0>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148906199100>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148906199340>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148906199580>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148906199820>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148906199a60>, <astropy.io.fits.hdu.image.ImageHDU object at 0x148906199ca0>, <astropy.io.fits.hdu.table.BinTableHDU object at 0x1489061a7040>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "c01f0690-15bd-4a3a-931b-f627f8b0ccf8",
    "metadata": {
     "tags": []
@@ -243,10 +243,10 @@
     {
      "data": {
       "text/plain": [
-       "<regions.core.mask.RegionMask at 0x148938c59cd0>"
+       "<regions.core.mask.RegionMask at 0x1489061a73a0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "eef7a332-b26a-486a-9ea0-4925c82f67a2",
    "metadata": {
     "tags": []
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "a8f6e88d-f5b7-4dc9-996e-4d1498fe2ba2",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "33"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "763c46f1-b46a-4f4c-81cd-bfa463bf6e92",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "8d8d151b-e668-48a5-95c6-d65911216002",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "10"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "e226fa67-9848-488c-b797-f3ee2a74b797",
    "metadata": {
     "tags": []
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "efae9c3d-9399-42fb-98dc-8b3bb5d08fd3",
    "metadata": {
     "tags": []
