--- a/reduction/align_align.ipynb
+++ b/reduction/align_align.ipynb
@@ -1164,6 +1164,338 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65c44bf3-8c3f-4491-a141-583310fb5475",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "id": "cd8dc988-092e-44dd-b7a2-3d40a1a8f4c5",
+   "metadata": {},
+   "source": [
+    "# NRCB \n",
+    "decoffset=-2.9*u.arcsec\n",
+    "raoffset=-0.7*u.arcsec\n",
+    "# NRCA\n",
+    "decoffset=-4.6*u.arcsec\n",
+    "raoffset=-0.8*u.arcsec\n",
+    "# Merged\n",
+    "decoffset=-4.6*u.arcsec\n",
+    "raoffset=-0.8*u.arcsec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5ff76ee0-e5a6-44a4-a0be-9b118520c530",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fn = f'{basepath}/{filtername.upper()}/pipeline/jw0{proposal_id}-o{field}_t001_nircam_clear-{filtername.lower()}-{module}_i2d.fits'\n",
+    "f = fits.open(fn)\n",
+    "w = WCS(f['SCI'].header)\n",
+    "sky = w.pixel_to_world(3903, 868)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "00416873-37f6-4964-b92f-be2b96004338",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SkyCoord (ICRS): (ra, dec) in deg\n",
+       "    (266.59444565, -28.58868352)>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sky"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1d6ed14a-f6fd-4a85-bc87-39629e899867",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SkyCoord (ICRS): (ra, dec) in deg\n",
+       "    (266.594893, -28.587417)>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coord = SkyCoord(266.594893*u.deg, -28.587417*u.deg)\n",
+    "coord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2b0f218c-378f-4669-a46c-c1d42880b9ad",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$-0^\\circ00{}^\\prime01.61047669{}^{\\prime\\prime}$"
+      ],
+      "text/plain": [
+       "<Angle -0.00044735 deg>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sky.ra - coord.ra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7955c2be-aff0-4830-88d7-d4ca4f63c4f2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$-0^\\circ00{}^\\prime04.55948077{}^{\\prime\\prime}$"
+      ],
+      "text/plain": [
+       "<Angle -0.00126652 deg>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sky.dec - coord.dec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6260a417-634d-4e0a-b476-5d1105ddc5d2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pix_coords = {'nrca': (3904, 869), 'nrcb': (1119, 832), 'merged': (3903, 868)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d53fabb6-68db-4f5c-b5f0-9e792379d0e1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3903"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pix_coords[module][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "531f16f3-cffb-46f8-82f2-b96cf97ed2b3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "filtername = 'F405N'\n",
+    "proposal_id = '2221'\n",
+    "field = '002'\n",
+    "module = 'nrcb'\n",
+    "regionname = 'cloudc'\n",
+    "basepath = f'/orange/adamginsburg/jwst/{regionname}/'\n",
+    "fov_regname = {'brick': 'regions/nircam_brick_fov.reg',\n",
+    "              'cloudc': 'regions/nircam_cloudc_fov.reg',\n",
+    "              }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c64fb05a-efb6-4e8d-bab2-a88b4286751d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: FITSFixedWarning: 'datfix' made the change 'Set DATE-BEG to '2023-04-15T15:08:19.262' from MJD-BEG.\n",
+      "Set DATE-AVG to '2023-04-20T10:07:45.034' from MJD-AVG.\n",
+      "Set DATE-END to '2023-04-25T05:06:53.342' from MJD-END'. [astropy.wcs.wcs]\n",
+      "WARNING: FITSFixedWarning: 'obsfix' made the change 'Set OBSGEO-L to  -134.380275 from OBSGEO-[XYZ].\n",
+      "Set OBSGEO-B to    -3.177752 from OBSGEO-[XYZ].\n",
+      "Set OBSGEO-H to 1298809712.873 from OBSGEO-[XYZ]'. [astropy.wcs.wcs]\n"
+     ]
+    }
+   ],
+   "source": [
+    "star_coord = SkyCoord(266.594893*u.deg, -28.587417*u.deg)\n",
+    "fn = f'{basepath}/{filtername.upper()}/pipeline/jw0{proposal_id}-o{field}_t001_nircam_clear-{filtername.lower()}-{module}_i2d.fits'\n",
+    "f = fits.open(fn)\n",
+    "w = WCS(f['SCI'].header)\n",
+    "sky = w.pixel_to_world(pix_coords[module][0], pix_coords[module][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8232b9c5-4b83-40db-8c90-67704f544247",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "decoffset = sky.dec - star_coord.dec\n",
+    "raoffset = sky.ra - star_coord.ra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "01481920-52ac-47dd-bd4b-a71746d6a8f3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Kept 7752 out of 9945 VVV stars using ksmag_limit>11 [align_to_catalogs]\n",
+      "INFO: For f405n nrcb 002 catalog /orange/adamginsburg/jwst/cloudc//F405N/pipeline/jw02221-o002_t001_nircam_clear-f405n-nrcb_cat.ecsv, found 8437 of 8870 sources meeting criteria mag<15 [align_to_catalogs]\n",
+      "2023-10-11T16:22:01.323454: Before realignment, offset is -0.11092108172761073 arcsec, 0.013709171916076457 arcsec.  Found 2610 matches.\n",
+      "2023-10-11T16:22:01.421958: CRVAL before 266.5843821619429 -28.6135800296686\n",
+      "2023-10-11T16:22:01.440811: CRVAL after 266.5846187895 -28.612805596946\n",
+      "2023-10-11T16:22:01.910424: After realignment, offset is -0.0026075369191858044 arcsec, 0.0004392578269118985 arcsec with 2604 mathces\n",
+      "2023-10-11T16:22:02.029424: After re-realignment, offset is -0.0026075369191858044 arcsec, 0.0004392578269118985 arcsec using 2604 matches\n"
+     ]
+    }
+   ],
+   "source": [
+    "realigned_vvv_filename = f'{basepath}/{filtername.upper()}/pipeline/jw0{proposal_id}-o{field}_t001_nircam_clear-{filtername.lower()}-{module}_realigned-to-vvv.fits'\n",
+    "shutil.copy(f'{basepath}/{filtername.upper()}/pipeline/jw0{proposal_id}-o{field}_t001_nircam_clear-{filtername.lower()}-{module}_i2d.fits',\n",
+    "            realigned_vvv_filename)\n",
+    "realigned = realign_to_vvv(filtername=filtername.lower(), fov_regname=fov_regname[regionname], basepath=basepath, module=module, fieldnumber=field,\n",
+    "                           imfile=realigned_vvv_filename, ksmag_limit=15 if filtername=='f410m' else 11, mag_limit=15, \n",
+    "                           decoffset=decoffset, raoffset=raoffset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "e8a83fb6-2cd0-442e-8ab9-7886d7b20d80",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nrcb'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "3787ad45-43bd-4fec-ba27-8c7ab7dc217c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reftbl' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m realigned_refcat_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbasepath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfiltername\u001b[38;5;241m.\u001b[39mupper()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/pipeline/jw0\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproposal_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-o\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfield\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_t001_nircam_clear-\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfiltername\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodule\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_realigned-to-refcat.fits\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      2\u001b[0m shutil\u001b[38;5;241m.\u001b[39mcopy(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbasepath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfiltername\u001b[38;5;241m.\u001b[39mupper()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/pipeline/jw0\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproposal_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-o\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfield\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_t001_nircam_clear-\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfiltername\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodule\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_i2d.fits\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m             realigned_refcat_filename)\n\u001b[0;32m----> 4\u001b[0m realigned \u001b[38;5;241m=\u001b[39m realign_to_catalog(\u001b[43mreftbl\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mskycoord\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m      5\u001b[0m                                filtername\u001b[38;5;241m=\u001b[39mfiltername\u001b[38;5;241m.\u001b[39mlower(),\n\u001b[1;32m      6\u001b[0m                                basepath\u001b[38;5;241m=\u001b[39mbasepath, module\u001b[38;5;241m=\u001b[39mmodule,\n\u001b[1;32m      7\u001b[0m                                fieldnumber\u001b[38;5;241m=\u001b[39mfield,\n\u001b[1;32m      8\u001b[0m                                mag_limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m,\n\u001b[1;32m      9\u001b[0m                                imfile\u001b[38;5;241m=\u001b[39mrealigned_refcat_filename,\n\u001b[1;32m     10\u001b[0m                                raoffset\u001b[38;5;241m=\u001b[39mraoffset, decoffset\u001b[38;5;241m=\u001b[39mdecoffset)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'reftbl' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "realigned_refcat_filename = f'{basepath}/{filtername.upper()}/pipeline/jw0{proposal_id}-o{field}_t001_nircam_clear-{filtername.lower()}-{module}_realigned-to-refcat.fits'\n",
+    "shutil.copy(f'{basepath}/{filtername.upper()}/pipeline/jw0{proposal_id}-o{field}_t001_nircam_clear-{filtername.lower()}-{module}_i2d.fits',\n",
+    "            realigned_refcat_filename)\n",
+    "realigned = realign_to_catalog(reftbl['skycoord'],\n",
+    "                               filtername=filtername.lower(),\n",
+    "                               basepath=basepath, module=module,\n",
+    "                               fieldnumber=field,\n",
+    "                               mag_limit=20,\n",
+    "                               imfile=realigned_refcat_filename,\n",
+    "                               raoffset=raoffset, decoffset=decoffset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08bddb4f-1a41-4e38-aa0f-5a0fc86bba5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
