working on bulk offset fix

--- a/reduction/align_align.ipynb
+++ b/reduction/align_align.ipynb
@@ -1307,19 +1307,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "id": "6260a417-634d-4e0a-b476-5d1105ddc5d2",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "pix_coords = {'nrca': (3904, 869), 'nrcb': (1119, 832), 'merged': (3903, 868)}"
+    "pix_coords = {'2221':\n",
+    "              {'002': \n",
+    "               {\n",
+    "                   'star_coord': SkyCoord(266.594893*u.deg, -28.587417*u.deg),\n",
+    "                   'nrca': (3904, 869), \n",
+    "                   'nrcb': (1119, 832), \n",
+    "                   'merged': (3903, 868)\n",
+    "               }\n",
+    "              }\n",
+    "             }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
+   "id": "ec950d01-bb66-435d-8ae6-3eac688799a2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-10-12T12:56:52.103773: hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "if proposal_id in pix_coords and field in pix_coords[proposal_id]:\n",
+    "    print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "d53fabb6-68db-4f5c-b5f0-9e792379d0e1",
    "metadata": {
     "tags": []
@@ -1328,21 +1358,21 @@
     {
      "data": {
       "text/plain": [
-       "3903"
+       "1119"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pix_coords[module][0]"
+    "pix_coords[proposal_id][field][module][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "id": "531f16f3-cffb-46f8-82f2-b96cf97ed2b3",
    "metadata": {
     "tags": []
@@ -1362,36 +1392,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "id": "c64fb05a-efb6-4e8d-bab2-a88b4286751d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: FITSFixedWarning: 'datfix' made the change 'Set DATE-BEG to '2023-04-15T15:08:19.262' from MJD-BEG.\n",
-      "Set DATE-AVG to '2023-04-20T10:07:45.034' from MJD-AVG.\n",
-      "Set DATE-END to '2023-04-25T05:06:53.342' from MJD-END'. [astropy.wcs.wcs]\n",
-      "WARNING: FITSFixedWarning: 'obsfix' made the change 'Set OBSGEO-L to  -134.380275 from OBSGEO-[XYZ].\n",
-      "Set OBSGEO-B to    -3.177752 from OBSGEO-[XYZ].\n",
-      "Set OBSGEO-H to 1298809712.873 from OBSGEO-[XYZ]'. [astropy.wcs.wcs]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "star_coord = SkyCoord(266.594893*u.deg, -28.587417*u.deg)\n",
     "fn = f'{basepath}/{filtername.upper()}/pipeline/jw0{proposal_id}-o{field}_t001_nircam_clear-{filtername.lower()}-{module}_i2d.fits'\n",
     "f = fits.open(fn)\n",
     "w = WCS(f['SCI'].header)\n",
-    "sky = w.pixel_to_world(pix_coords[module][0], pix_coords[module][1])"
+    "sky = w.pixel_to_world(pix_coords[proposal_id][field][module][0], pix_coords[proposal_id][field][module][1])\n",
+    "star_coord = pix_coords[proposal_id][field]['star_coord']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "id": "8232b9c5-4b83-40db-8c90-67704f544247",
    "metadata": {
     "tags": []
