working on making img for destreak

--- a/reduction/reduction_2.ipynb
+++ b/reduction/reduction_2.ipynb
@@ -462,6 +462,10 @@
    "execution_count": 55,
    "id": "64e2f9af-c0ac-4791-93fe-abc4a4641f53",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
