--- a/reduction/reduction_2.ipynb
+++ b/reduction/reduction_2.ipynb
@@ -2615,7 +2615,7 @@
     "        hdr = fits.getheader(member['expname'])\n",
     "        if filtername in (hdr['PUPIL'], hdr['FILTER']):\n",
     "            outname = destreak(member['expname'],\n",
-    "                               use_background_map=False,\n",
+    "                               use_background_map=True,\n",
     "                               median_filter_size=2048)  # median_filter_size=medfilt_size[filtername])\n",
     "            member['expname'] = outname\n",
     "\n",
@@ -2672,7 +2672,7 @@
     "            hdr = fits.getheader(member['expname'])\n",
     "            if filtername in (hdr['PUPIL'], hdr['FILTER']):\n",
     "                outname = destreak(member['expname'],\n",
-    "                                   use_background_map=False,\n",
+    "                                   use_background_map=True,\n",
     "                                   median_filter_size=2048)  # median_filter_size=medfilt_size[filtername])\n",
     "                member['expname'] = outname\n",
     "            \n",
