--- a/reduction/reduction_2.ipynb
+++ b/reduction/reduction_2.ipynb
@@ -2,21 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "935f934e-fd7d-434e-b7ba-f4b364d17db4",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (align_to_catalogs.py, line 116)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[1;32m/blue/adamginsburg/adamginsburg/miniconda3/envs/python39savannah/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3505\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 40\u001b[0;36m\n\u001b[0;31m    from align_to_catalogs import realign_to_vvv, merge_a_plus_b, retrieve_vvv\u001b[0;36m\n",
-      "\u001b[0;36m  File \u001b[0;32m/blue/adamginsburg/adamginsburg/jwst/cloudc/reduction/brick-jwst-2221/reduction/align_to_catalogs.py:116\u001b[0;36m\u001b[0m\n\u001b[0;31m    <<<<<<< HEAD\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-11-17T08:36:37.357008: 1.12.1.dev17+gd16808d0\n"
      ]
     }
    ],
@@ -59,6 +55,7 @@
     "from jwst import datamodels\n",
     "from jwst.associations import asn_from_list\n",
     "from jwst.associations.lib.rules_level3_base import DMS_Level3_Base\n",
+    "from jwst.datamodels import DataModel\n",
     "\n",
     "from align_to_catalogs import realign_to_vvv, merge_a_plus_b, retrieve_vvv\n",
     "#from saturated_star_finding import iteratively_remove_saturated_stars, remove_saturated_stars\n",
@@ -94,6 +91,106 @@
     "module = 'merged'\n",
     "field = '002'\n",
     "regionname = 'cloudc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4e4a8b43-d127-456c-ab15-ca9b01d2e2ee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-17 08:40:10,627 - stpipe.TweakRegStep - INFO - TweakRegStep instance created.\n",
+      "2023-11-17 08:40:11,952 - stpipe.TweakRegStep - INFO - Step TweakRegStep running with args ([<ImageModel(2048, 2048) from jw02221002002_08201_00004_nrcalong_align.fits>, <ImageModel(2048, 2048) from jw02221002002_08201_00002_nrcalong_align.fits>],).\n",
+      "2023-11-17 08:40:11,956 - stpipe.TweakRegStep - INFO - Step TweakRegStep parameters are: {'pre_hooks': [], 'post_hooks': [], 'output_file': None, 'output_dir': '/orange/adamginsburg/jwst/cloudc/F405N/pipeline/', 'output_ext': '.fits', 'output_use_model': True, 'output_use_index': True, 'save_results': True, 'skip': False, 'suffix': None, 'search_output_file': True, 'input_dir': '', 'save_catalogs': True, 'use_custom_catalogs': False, 'catalog_format': 'ecsv', 'catfile': '', 'kernel_fwhm': 2.5, 'snr_threshold': 30, 'sharplo': 0.3, 'sharphi': 0.9, 'roundlo': -0.25, 'roundhi': 0.25, 'brightest': 500, 'peakmax': None, 'bkg_boxsize': 400, 'enforce_user_order': False, 'expand_refcat': False, 'minobj': 15, 'searchrad': 5, 'use2dhist': True, 'separation': 0.5, 'tolerance': 0.7, 'xoffset': 0.0, 'yoffset': 0.0, 'fitgeometry': 'general', 'nclip': 5, 'sigma': 3.0, 'abs_refcat': '', 'save_abs_catalog': False, 'abs_minobj': 15, 'abs_searchrad': 6.0, 'abs_use2dhist': True, 'abs_separation': 0.1, 'abs_tolerance': 0.7, 'abs_fitgeometry': 'rshift', 'abs_nclip': 3, 'abs_sigma': 3.0}\n",
+      "2023-11-17 08:40:11,979 - stpipe.TweakRegStep - INFO - In tweakreg_step, brightest = 500\n",
+      "2023-11-17 08:40:12,002 - stpipe.TweakRegStep - WARNING - /blue/adamginsburg/adamginsburg/miniconda3/envs/python39savannah/lib/python3.9/site-packages/photutils/background/background_2d.py:274: AstropyUserWarning: Input data contains invalid values (NaNs or infs), which were automatically masked.\n",
+      "  warnings.warn('Input data contains invalid values (NaNs or '\n",
+      "\n",
+      "2023-11-17 08:40:13,484 - stpipe.TweakRegStep - INFO - In make_tweakreg_catalog, brightest = 500\n",
+      "2023-11-17 08:40:14,196 - stpipe.TweakRegStep - INFO - In make_tweakreg_catalog, brightest = 500.  len(sources) = 500\n",
+      "2023-11-17 08:40:14,204 - stpipe.TweakRegStep - INFO - In tweakreg_step, brightest = 500. len(catalog)=500\n",
+      "2023-11-17 08:40:14,207 - stpipe.TweakRegStep - INFO - Detected 500 sources in jw02221002002_08201_00004_nrcalong_align.fits.\n",
+      "2023-11-17 08:40:14,215 - stpipe.TweakRegStep - INFO - Wrote source catalog: jw02221002002_08201_00004_nrcalong_align_cat.ecsv\n",
+      "2023-11-17 08:40:14,232 - stpipe.TweakRegStep - INFO - In tweakreg_step, brightest = 500\n",
+      "2023-11-17 08:40:14,253 - stpipe.TweakRegStep - WARNING - /blue/adamginsburg/adamginsburg/miniconda3/envs/python39savannah/lib/python3.9/site-packages/photutils/background/background_2d.py:274: AstropyUserWarning: Input data contains invalid values (NaNs or infs), which were automatically masked.\n",
+      "  warnings.warn('Input data contains invalid values (NaNs or '\n",
+      "\n",
+      "2023-11-17 08:40:15,657 - stpipe.TweakRegStep - INFO - In make_tweakreg_catalog, brightest = 500\n",
+      "2023-11-17 08:40:16,378 - stpipe.TweakRegStep - INFO - In make_tweakreg_catalog, brightest = 500.  len(sources) = 500\n",
+      "2023-11-17 08:40:16,387 - stpipe.TweakRegStep - INFO - In tweakreg_step, brightest = 500. len(catalog)=500\n",
+      "2023-11-17 08:40:16,389 - stpipe.TweakRegStep - INFO - Detected 500 sources in jw02221002002_08201_00002_nrcalong_align.fits.\n",
+      "2023-11-17 08:40:16,398 - stpipe.TweakRegStep - INFO - Wrote source catalog: jw02221002002_08201_00002_nrcalong_align_cat.ecsv\n",
+      "2023-11-17 08:40:16,415 - stpipe.TweakRegStep - INFO - \n",
+      "2023-11-17 08:40:16,417 - stpipe.TweakRegStep - INFO - Number of image groups to be aligned: 2.\n",
+      "2023-11-17 08:40:16,418 - stpipe.TweakRegStep - INFO - Image groups:\n",
+      "2023-11-17 08:40:16,445 - stpipe.TweakRegStep - INFO - * Images in GROUP 'jw02221002002_08201_00004_nrcalong_align':\n",
+      "2023-11-17 08:40:16,447 - stpipe.TweakRegStep - INFO -      jw02221002002_08201_00004_nrcalong_align\n",
+      "2023-11-17 08:40:16,448 - stpipe.TweakRegStep - INFO - Grouped imcats has length 1\n",
+      "2023-11-17 08:40:16,474 - stpipe.TweakRegStep - INFO - * Images in GROUP 'jw02221002002_08201_00002_nrcalong_align':\n",
+      "2023-11-17 08:40:16,477 - stpipe.TweakRegStep - INFO -      jw02221002002_08201_00002_nrcalong_align\n",
+      "2023-11-17 08:40:16,478 - stpipe.TweakRegStep - INFO - Grouped imcats has length 2\n",
+      "2023-11-17 08:40:16,479 - stpipe.TweakRegStep - INFO - \n",
+      "2023-11-17 08:40:16,480 - stpipe.TweakRegStep - INFO - doing xyxymatch for image groups\n",
+      "2023-11-17 08:40:16,481 - stpipe.TweakRegStep - INFO - doing align_wcs for image groups\n",
+      "2023-11-17 08:40:16,482 - stpipe.TweakRegStep - INFO - In tweakreg_step, at align_wcs with groups, brightest = 500. len(catalog)=500\n",
+      "2023-11-17 08:40:16,483 - stpipe.TweakRegStep - INFO -  \n",
+      "2023-11-17 08:40:16,484 - stpipe.TweakRegStep - INFO - ***** tweakwcs.imalign.align_wcs() started on 2023-11-17 08:40:16.483784\n",
+      "2023-11-17 08:40:16,486 - stpipe.TweakRegStep - INFO -       Version 0.8.3\n",
+      "2023-11-17 08:40:16,487 - stpipe.TweakRegStep - INFO -  \n",
+      "2023-11-17 08:40:16,631 - stpipe.TweakRegStep - INFO - Selected image 'GROUP ID: jw02221002002_08201_00004_nrcalong_align' as reference image\n",
+      "2023-11-17 08:40:16,640 - stpipe.TweakRegStep - INFO - Aligning image catalog 'GROUP ID: jw02221002002_08201_00002_nrcalong_align' to the reference catalog.\n",
+      "2023-11-17 08:40:16,811 - stpipe.TweakRegStep - INFO - Matching sources from 'jw02221002002_08201_00002_nrcalong_align' catalog with sources from the reference 'jw02221002002_08201_00004_nrcalong_align' catalog.\n",
+      "2023-11-17 08:40:16,813 - stpipe.TweakRegStep - INFO - Computing initial guess for X and Y shifts...\n",
+      "2023-11-17 08:40:16,818 - stpipe.TweakRegStep - INFO - Found initial X and Y shifts of 0.03331, 0.03331 (arcsec) with significance of 285.6 and 290 matches.\n",
+      "2023-11-17 08:40:16,821 - stpipe.TweakRegStep - INFO - Found 296 matches for 'GROUP ID: jw02221002002_08201_00002_nrcalong_align'...\n",
+      "2023-11-17 08:40:16,822 - stpipe.TweakRegStep - INFO - Performing 'general' fit\n",
+      "2023-11-17 08:40:16,825 - stpipe.TweakRegStep - INFO - Computed 'general' fit for GROUP ID: jw02221002002_08201_00002_nrcalong_align:\n",
+      "2023-11-17 08:40:16,827 - stpipe.TweakRegStep - INFO - XSH: 0.000629305  YSH: 0.00332668    PROPER ROT: 0.000396995    \n",
+      "2023-11-17 08:40:16,828 - stpipe.TweakRegStep - INFO - <ROT>: 0.000396995  SKEW: -0.000576796    ROT_X: 0.000685393  ROT_Y: 0.000108597\n",
+      "2023-11-17 08:40:16,829 - stpipe.TweakRegStep - INFO - <SCALE>: 1  SCALE_X: 1  SCALE_Y: 1\n",
+      "2023-11-17 08:40:16,830 - stpipe.TweakRegStep - INFO - \n",
+      "2023-11-17 08:40:16,831 - stpipe.TweakRegStep - INFO - FIT RMSE: 0.00334825   FIT MAE: 0.00277375\n",
+      "2023-11-17 08:40:16,832 - stpipe.TweakRegStep - INFO - Final solution based on 290 objects.\n",
+      "2023-11-17 08:40:16,880 - stpipe.TweakRegStep - INFO -  \n",
+      "2023-11-17 08:40:16,882 - stpipe.TweakRegStep - INFO - ***** tweakwcs.imalign.align_wcs() ended on 2023-11-17 08:40:16.880025\n",
+      "2023-11-17 08:40:16,883 - stpipe.TweakRegStep - INFO - ***** tweakwcs.imalign.align_wcs() TOTAL RUN TIME: 0:00:00.396241\n",
+      "2023-11-17 08:40:16,884 - stpipe.TweakRegStep - INFO -  \n",
+      "2023-11-17 08:40:16,983 - stpipe.TweakRegStep - INFO - Updating FITS wcsinfo for image_model <ImageModel(2048, 2048) from jw02221002002_08201_00002_nrcalong_align.fits>\n",
+      "2023-11-17 08:40:17,451 - stpipe.TweakRegStep - INFO - Saved model in /orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_08201_00004_nrcalong_align_tweakregstep.fits\n",
+      "2023-11-17 08:40:17,881 - stpipe.TweakRegStep - INFO - Saved model in /orange/adamginsburg/jwst/cloudc/F405N/pipeline/jw02221002002_08201_00002_nrcalong_align_tweakregstep.fits\n",
+      "2023-11-17 08:40:17,884 - stpipe.TweakRegStep - INFO - Step TweakRegStep done\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c8e56b72-3e95-4fa4-8238-5daa79e583e1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ImageModel(2048, 2048) from jw02221002002_08201_00004_nrcalong_align.fits>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dM"
    ]
   },
   {
